--- a/index.html
+++ b/index.html
@@ -64,10 +64,7 @@
           Technologies I use</h3>
       </div>
       <br class="text-center mb-2">
-      <p class="lead mb-0">I'm a designer and developer with a passion for technology. It is a genuine
-        thrill to see the ways in which technology changes our lives, brings us closer to far-away friends, and
-        makes our jobs more pleasant. It's this appreciation for technology that inspires me to
-        become a better web developer each day.</p><br />
+      <p class="lead mb-0">I'm a designer and developer with a passion for technology! </p></br>
       <p class="lead mb-0">I graduated with my degree in Integrated Business from the University of Central Florida in
         2018. After leaving, I worked as a web designer and developer for an international healthcare company. Later, I
         started to work for Juvare LLC., an emergency-response software company whose product helps
