--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
 
   <link rel="stylesheet" href="/style.css">
   <script defer src="/scripts.js"></script>
-  <title>Web Developer and Designer | Tyler Pedraja </title>
+  <title>Web Developer and Designer | Tyler Pedraja</title>
 </head>
 
 <body>
   <main>
     <nav class="d-flex justify-content-between align-items-center bg-blue text-white p-3">
       <div>
-        <a href="/"><img src="assets/images/logo.jpg" style="width:50px;"></a>
+        <div class="d-flex align-items-start">
+          <a href="/"><img src="assets/images/logo.jpg" style="display: block;width:50px;"></a>
+          <div class="ms-3">
+            <a href="mailto:tpedraja@tylerpedraja.com">tpedraja@tylerpedraja.com</a>
+          </div>
+        </div>
+
       </div>
       <ul class="d-block m-0">
         <a href="https://www.linkedin.com/in/tylerpedraja/">LinkedIn</a>
@@ -64,13 +70,14 @@
           Technologies I use</h3>
       </div>
       <br class="text-center mb-2">
-      <p class="lead mb-0">I'm a designer and developer with a passion for technology! </p></br>
+      <p class="lead mb-3">I'm a designer and developer with a passion for technology!</p>
       <p class="lead mb-0">I graduated with my degree in Integrated Business from the University of Central Florida in
         2018. After leaving, I worked as a web designer and developer for an international healthcare company. Later, I
         started to work for Juvare LLC., an emergency-response software company whose product helps
         governments,
         universities, and large companies to respond to emergencies like fires, earthquakes, and
-        cybersecurity attacks. It's there that I honed my skills in JavaScript, API / backend services, and learned my
+        cybersecurity attacks. It's there that I further developed my skills in JavaScript, API / backend services, and
+        learned my
         way
         around a SQL database.</p>
       </br>
@@ -83,7 +90,7 @@
           <img src="assets/images/React.svg" alt="Internet explorer logo" class="d-block img-fluid align-self-center ">
           <div class="ms-4">
             <p class="bold mb-0 mt-3 d-block">React.js</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quia.</p>
+            <p>I use React.js to build single-page applications with client-side routing and re-usable components.</p>
           </div>
         </div>
         <div class="d-flex flex-md-column my-3 justify-content-center feature_card">
@@ -91,7 +98,7 @@
             class="d-md-block d-none img-fluid align-self-center">
           <div class="ms-4">
             <p class="bold mb-0 mt-3 d-block">Node.js</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, id!</p>
+            <p>I use Node.js with common backend tools like <i>Express, Redux, Axios, OAuth, Postman</i> and more.</p>
           </div>
           <img src="assets/images/Node.svg" alt="Internet explorer logo"
             class="d-md-none ms-3 img-fluid align-self-center">
@@ -99,15 +106,19 @@
         <div class="d-flex flex-md-column justify-content-center feature_card">
           <img src="assets/images/sql.svg" alt="Internet explorer logo" class="d-block img-fluid align-self-center">
           <div class="ms-4">
-            <p class="bold mb-0 mt-3 d-block">SQL</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, cum?</p>
+            <p class="bold mb-0 mt-3 d-block">SQL / MongoDB</p>
+            <p>I mostly use SQL in my day-to-day, but I'm also familiar with MongoDB and it's most common library,
+              <i>Mongoose.js.</i>
+            </p>
           </div>
         </div>
         <div class="d-md-flex flex-md-column justify-content-center feature_card d-none">
           <img src="assets/images/thumb.svg" alt="Internet explorer logo" class="d-block img-fluid align-self-center">
           <div class="ms-4">
-            <p class="bold mb-0 mt-3 d-block">Design</p>
-            <p>Seemless design to help visitors see what they want, easily.</p>
+            <p class="bold mb-0 mt-3 d-block">Intuitive Design</p>
+            <p>I design sites with users in mind. I think: <i>"What is the most intuitive way that I can
+                organize this site?"</i>
+            </p>
           </div>
         </div>
       </div>
@@ -115,17 +126,17 @@
     </div>
 
     <!-- checkboxes desktop -->
-    <div class="container mt-5 mt-md-0 mb-5 skills d-none d-md-block">
+    <div class="container mt-5 mt-md-0 mb-5 skills text-secondary d-none d-md-block">
       <div class="row">
         <div class="col-md-4 d-flex  justify-content-md-center align-items-center">
           <div>
             <div class="d-flex item align-items-center">
               <img src="assets/images/check.svg" class="align-self-start d-block">
-              <p class="d-block">HTML</p>
+              <p class="d-block">HTML / CSS</p>
             </div>
             <div class="d-flex item mt-2 align-items-center">
               <img src="assets/images/check.svg" class="align-self-start d-block">
-              <p class="d-block">CSS/Sass</p>
+              <p class="d-block">JavaScript</p>
             </div>
           </div>
         </div>
@@ -133,7 +144,7 @@
           <div>
             <div class="d-flex item align-items-center">
               <img src="assets/images/check.svg" class="align-self-start d-block">
-              <p class="d-block">JavaScript</p>
+              <p class="d-block">React.js / Node.js</p>
             </div>
             <div class="d-flex item mt-2 align-items-center">
               <img src="assets/images/check.svg" class="align-self-start d-block">
@@ -188,10 +199,16 @@
         <div class="col-6">
           <div class="d-flex item align-items-center">
             <img src="assets/images/check.svg" class="align-self-start d-block">
-            <p class="d-block">HTML</p>
+            <p class="d-block">HTML / CSS</p>
           </div>
         </div>
         <div class="col-6">
+          <div class="d-flex item align-items-center">
+            <img src="assets/images/check.svg" class="align-self-start d-block">
+            <p class="d-block">React.js / Node.js</p>
+          </div>
+        </div>
+        <div class="col-6 mt-2">
           <div class="d-flex item align-items-center">
             <img src="assets/images/check.svg" class="align-self-start d-block">
             <p class="d-block">JavaScript</p>
@@ -200,13 +217,7 @@
         <div class="col-6 mt-2">
           <div class="d-flex item align-items-center">
             <img src="assets/images/check.svg" class="align-self-start d-block">
-            <p class="d-block">Phtoshop</p>
-          </div>
-        </div>
-        <div class="col-6 mt-2">
-          <div class="d-flex item align-items-center">
-            <img src="assets/images/check.svg" class="align-self-start d-block">
-            <p class="d-block">CSS/Sass</p>
+            <p class="d-block">Photoshop</p>
           </div>
         </div>
         <div class="col-6 mt-2">
@@ -273,25 +284,25 @@
     <div class="projects my-5 pb-4">
       <div class="myCard d-flex flex-column justify-content-between">
         <div>
-          <a href="/" class="d-block align-self-start"><img src="assets/images/webeoc.webp" alt=""
-              class="d-block img-fluid"></a>
+          <a href="https://tpedr-proshop.herokuapp.com/" class="d-block align-self-start"><img
+              src="assets/images/webeoc.webp" class="d-block img-fluid"></a>
           <div class="p-3">
-            <a href="https://www.juvare.com" class="card_title">Juvare WebEOC &reg;</a>
+            <a href="https://tpedr-proshop.herokuapp.com/" class="card_title d-block mb-2">TechShop&reg;</a>
             <div class="d-flex mb-3">
               <small class="small">JavaScript</small>
               <small class="small">SQL</small>
               <small class="small">Material Design</small>
             </div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat aliquid officiis maxime explicabo
-              impedit
-              quis maiores enim quos dolor voluptatum.
+            <p>This site is intended to demonstrate my skills in backend technologies. This project is built from the
+              ground-up with Express and Redux, a live MongoDB database, user login/authentication, an admin dashboard,
+              and integration with
+              PayPal.
             </p>
           </div>
         </div>
         <div class="d-flex p-3 justify-self-end align-items-center">
-          <a href="https://www.juvare.com" class="button_sm_primary me-3">Juvare Site</a>
-          <a class="button_sm_secondary relative" data-toggle="tooltip" data-placement="bottom"
-            title="Sorry! The code for this site is proprietary and unavailable on my Github.">Github
+          <a href="https://www.juvare.com" class="button_sm_primary me-3">Live Site</a>
+          <a href="https://github.com/tylerpedraja/proshop" class="button_sm">Github
           </a>
         </div>
       </div>
@@ -300,15 +311,15 @@
           <a href="/" class="d-block align-self-start"><img src="assets/images/webeoc.webp" alt=""
               class="d-block img-fluid"></a>
           <div class="p-3">
-            <a href="https://www.juvare.com" class="card_title">Juvare WebEOC &reg;</a>
+            <a href="https://tpedr-proshop.herokuapp.com/" class="card_title d-block mb-2">Juvare WebEOC &reg;</a>
             <div class="d-flex mb-3">
-              <small class="small">JavaScript</small>
-              <small class="small">SQL</small>
-              <small class="small">Material Design</small>
+              <small class="small">React.js</small>
+              <small class="small">Node.js</small>
+              <small class="small">MongoDB</small>
             </div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat aliquid officiis maxime explicabo
-              impedit
-              quis maiores enim quos dolor voluptatum.
+            <p>At Juvare, I build software solutions for government and private emergency-response organizations in
+              their proprietary CMS, WebEOC. I build communication, reporting, data entry, and logging tools to help the
+              organization better manage their resources. This code is unfortunately unavailable to the public.
             </p>
           </div>
         </div>
@@ -326,18 +337,19 @@
               src="assets/images/green_site.png" alt="" class="d-block img-fluid"></a>
           <div class="p-3">
             <div class="d-flex flex-column mb-3">
-              <a href="https://musing-spence-f39158.netlify.app/" class="card_title d-block">SITE 64 &reg;</a>
+              <a href="https://musing-spence-f39158.netlify.app/" class="d-block mb-2">Site for <strong>
+                  Acorn Stairlifts
+                </strong>&reg;</a>
               <div class="d-flex">
                 <small class="small">HTML</small>
                 <small class="small">CSS</small>
                 <small class="small">Bootstrap</small>
               </div>
             </div>
-            <p>A classic-looking site. Viewers feel confident in the authority of a company when their site shows
-              attention to detail.
+            <p>A classic-looking site. My favorite part about this project is how even a simple design can look modern
+              and hand-crafted. I use Bootstrap for its grid system and custom CSS for most everything else.
             </p>
           </div>
-
         </div>
         <div class="d-flex p-3 justify-self-end align-items-center">
           <a href="https://musing-spence-f39158.netlify.app/" class="button_sm_primary me-3">Live Site</a>
@@ -353,15 +365,18 @@
               src="assets/images/yellow_site.png" alt="" class="d-block img-fluid"></a>
           <div class="p-3">
             <div class="d-flex flex-column mb-3">
-              <a href="https://angry-fermat-1050c0.netlify.app/" class="card_title d-block">SITE 60 &reg;</a>
+              <a href="https://angry-fermat-1050c0.netlify.app/" class="d-block mb-2">Site for <strong>
+                  Acorn Stairlifts
+                </strong>&reg;</a>
               <div class="d-flex">
                 <small class="small">HTML</small>
                 <small class="small">CSS</small>
                 <small class="small">Bootstrap</small>
               </div>
             </div>
-            <p>A fun take on a site for older-customers. This site sticks out among it's competitors by using modern
-              design, dynamic images, and mobile-focused navigation.
+            <p>I'm proud of how this site came out. It uses creative use of SVG's, absolute positioning, and parallax
+              scrolling. And of course, It's fully
+              responsive on mobile and tablet!
             </p>
           </div>
 
